====================
Bazaar Release Notes
====================

.. contents::

IN DEVELOPMENT
==============

  NOTES WHEN UPGRADING:

  CHANGES:

  FEATURES:

   * New ``authentication.conf`` file holding the password or other credentials
     for remote servers. This can be used for ssh, sftp, smtp and other 
     supported transports.
     (Vincent Ladeuil)

  PERFORMANCE:

   * Commit updates the state of the working tree via a delta rather than
     supplying entirely new basis trees. For commit of a single specified file
     this reduces the wall clock time for commit by roughly a 30%.
     (Robert Collins, Martin Pool)

   * Fetch with pack repositories will no longer read the entire history graph.
     (Robert Collins, #88319)

   * Revert takes out an appropriate lock when reverting to a basis tree, and
     does not read the basis inventory twice. (Robert Collins)

  IMPROVEMENTS:

   * ``bzr tags`` now prints the revision number for each tag, instead of
     the revision id, unless --show-ids is passed. In addition, tags can be
     sorted chronologically instead of lexicographically with --sort=time.
     (Adeodato Simó, #120231)

  DOCUMENTATION:

  BUG FIXES:

   * A progress bar has been added for knitpack -> knitpack fetching.
     (Robert Collins, #157789)

   * Do no use timeout in HttpServer anymore.
     (Vincent Ladeuil, #158972).

   * Don't catch the exceptions related to the http pipeline status before
     retrying an http request or some programming errors may be masked.
     (Vincent Ladeuil, #160012)

   * Don't use timeout in HttpServer anymore.
     (Vincent Ladeuil, #158972).

   * FTP server errors don't error in the error handling code.
     (Robert Collins, #161240)

   * It is clearer when a plugin cannot be loaded because of its name, and a
     suggestion for an acceptable name is given. (Daniel Watkins, #103023)

   * Obsolete packs are now cleaned up by pack and autopack operations.
     (Robert Collins, #153789)
